syntax="proto3";

option go_package="pb/";

message ProdRequest{
  int32 prod_id=1; // 传入商品ID
}
message ProdResponse{
  int32 prod_stock=3; //商品库存
}

service ProdService{
  rpc GetProdStock(ProdRequest) returns (ProdResponse);
}